# gemma.ggml

./: .gitignore  CMakeLists.txt  main.cpp  notes.md  test_main.cpp
src/: app.cpp  app.h  gemma_model.cpp  gemma_model.h  gemma_model_cpp  gemma_model_h  ggml_addon.cpp  ggml_addon.h  global.h  hpc.cpp  hpc.h  kernals.cl  macro.h  opencl.cpp  opencl.h  profiling.cpp  profiling.h  tensor_dump.cpp  tensor_dump.h  thread_pool.cpp  thread_pool.h  type.h
tensor_dump/: dump_tensor_list  tensor_in_target_cgraph
